tests/baselines/reference/generics2.errors.txt
tests/cases/compiler/generics2.ts(17,14): error TS2344: Type 'A' does not satisfy the constraint 'B'.
  Property 'b' is missing in type 'A'.
tests/cases/compiler/generics2.ts(20,9): error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/generics2.ts(21,9): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/generics2.ts(21,9): error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.


==== tests/cases/compiler/generics2.ts (4 errors) ====
    interface A { a: string; }
    interface B extends A { b: string; }
    interface C extends B { c: string; }
    interface G<T, U extends B> {
        x: T;
        y: U;
    }
    
    
    var v1: {
        x: { a: string; }
        y: { a: string; b: string; c: string };
    }; // Ok
    
    
    var v2: G<{ a: string }, C>;   // Ok, equivalent to G<A, C>
    var v3: G<A, A>;               // Error, A not valid argument for U
                 ~
!!! error TS2344: Type 'A' does not satisfy the constraint 'B'.
!!! error TS2344:   Property 'b' is missing in type 'A'.
    var v4: G<G<A, B>, C>;         // Ok
    var v5: G<any, any>;           // Error, any does not satisfy constraint B
    var v6: G<any>;                // Error, wrong number of arguments
            ~~~~~~
!!! error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
    var v7: G;                     // Error, no type arguments
            ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
            ~
!!! error TS2707: Type parameter 'U' implicitly has type 'any' because it was not supplied.
    